--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace github.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 3.7.8
+@version 3.7.9
 @updateURL https://raw.githubusercontent.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -930,6 +930,30 @@
 	{
 		color: var(--main-text) !important;
 	}
+	/*share embed*/
+	#embed-panel.yt-sharing-embed-renderer
+	{
+		background: var(--second-background) !important;
+	}
+	#close-panel-icon.yt-sharing-embed-renderer
+	{
+		color: var(--main-text) !important;
+	}
+	#close-panel-icon.yt-sharing-embed-renderer:hover
+	{
+		color: var(--main-color) !important;
+	}
+	#title-bar.yt-sharing-embed-renderer,
+	#additional-info.yt-sharing-embed-renderer,
+	#action-buttons.yt-sharing-embed-renderer
+	{
+		border-color: var(--hover-background) !important;
+	}
+	#privacy-mode-info.yt-sharing-embed-renderer
+	{
+		color: var(--dimmer-text) !important;
+	}
+
 	/*search for people*/
 	#to-field-header.ytd-contact-search-renderer
 	{
