--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -15,6 +15,7 @@
 	"Inspired-Dark",
 	"Breeze-Dark",
 	"HavocOS",
+	"Catppuccin",
 	"Arc-Dark",
 	"Vertex-Dark",
 	"Dracula",
@@ -77,6 +78,15 @@
 			--main-text: #eff0f1;
 			--dimmer-text: #ccc;
 			--shadow: 0 1px 0.5px rgba(0, 0, 0, .3);
+		}
+		else if stylus-deepdark-style == "Catppuccin" {
+			--main-color: #96CDFB;
+			--main-background: #1E1E2E;
+			--second-background: #1A1826;
+			--hover-background: #302D41;
+			--main-text: #D9E0EE;
+			--dimmer-text: #6E6C7E;
+			--shadow: 0 1px 0.5px rgba(0, 0, 0, .13);
 		}
 		else if stylus-deepdark-style == "Inspired-Dark" {
 			--main-color: #5e8acc;
