--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -85,7 +85,7 @@
 			--second-background: #1A1826;
 			--hover-background: #302D41;
 			--main-text: #D9E0EE;
-			--dimmer-text: #6E6C7E;
+			--dimmer-text: #F5E0DC;
 			--shadow: 0 1px 0.5px rgba(0, 0, 0, .13);
 		}
 		else if stylus-deepdark-style == "Inspired-Dark" {
